[tool.poetry]
name = "nonebot_plugin_roll"
version = "0.2.3a1"
description = "Roll a dice!"
authors = ["KafCoppelia <k740677208@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/MinatoAquaCrews/nonebot_plugin_roll"
keywords = ["nonebot2", "nonebot-plugin", "Roll", "MinatoAquaCrews"]
packages = [{include = "nonebot_plugin_roll"}]

[tool.poetry.dependencies]
python = "^3.8"
nonebot2 = "^2.0.0"
nonebot-adapter-onebot = "^2.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "tencentyun"
url = "https://mirrors.tencent.com/pypi/simple"
priority = "default"

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"